[project]
name = "gnnwr"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A pytorch implementation of the Geographically Neural Network Weighted Regression (GNNWR)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zjuwss/gnnwr"
"Bug Tracker" = "https://github.com/zjuwss/gnnwr/issues"
